Connect with comments controller
