# server/Domain/ApplicationUser.cs
@@ -1,3 +1,4 @@
+using CookBook.API.Responses.CommentsController;
 using CookBook.API.Responses.UserController;
 using CookBook.Attributes;
 using Microsoft.AspNetCore.Identity;
@@ -5,6 +6,7 @@ using Microsoft.AspNetCore.Identity;
 namespace CookBook.Domain
 {
     [Mappable(To = typeof(UserResponse))]
+    [Mappable(To = typeof(UserNameResponse))]
     public class ApplicationUser : IdentityUser
     {
 
